--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -7,6 +7,9 @@
   <p>Перед скриптом...</p>
 
   <script src="script.js"></script>
+  <p>...После скрипта.</p>
+  <p>...После скрипта.</p>
+  <p>...После скрипта.</p>
 
   <p>...После скрипта.</p>
   <p>...После скрипта.</p>
